<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ugre.myride.OfferRideActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guideLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2"/>
    <android.support.constraint.Guideline
        android:id="@+id/guideRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8"/>

    <AutoCompleteTextView
        android:id="@+id/from"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:hint="@string/from"
        app:layout_constraintLeft_toLeftOf="@id/guideLeft"
        app:layout_constraintRight_toRightOf="@id/guideRight"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/to"/>

    <AutoCompleteTextView
        android:id="@+id/to"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:hint="@string/to"
        app:layout_constraintLeft_toLeftOf="@id/guideLeft"
        app:layout_constraintRight_toRightOf="@id/guideRight"
        app:layout_constraintTop_toBottomOf="@id/from"
        app:layout_constraintBottom_toTopOf="@+id/dateAndTimeCL"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/dateAndTimeCL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/to"
        app:layout_constraintBottom_toTopOf="@+id/cost"
        app:layout_constraintLeft_toLeftOf="@id/guideLeft"
        app:layout_constraintRight_toRightOf="@id/guideRight">

        <EditText
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            android:inputType="date"
            android:focusable="false"
            android:clickable="true"
            android:longClickable="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/time"/>

        <EditText
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/time"
            android:inputType="time"
            android:focusable="false"
            android:clickable="true"
            android:longClickable="false"
            app:layout_constraintLeft_toRightOf="@id/date"
            app:layout_constraintRight_toRightOf="parent"/>
    </android.support.constraint.ConstraintLayout>

    <EditText
        android:id="@+id/cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/cost_max"
        android:maxLength="6"
        app:layout_constraintTop_toBottomOf="@id/dateAndTimeCL"
        app:layout_constraintBottom_toTopOf="@+id/numberOfSeatsCL"
        app:layout_constraintLeft_toLeftOf="@id/guideLeft"
        app:layout_constraintRight_toRightOf="@id/guideRight"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/numberOfSeatsCL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cost"
        app:layout_constraintBottom_toTopOf="@+id/checkCL"
        app:layout_constraintLeft_toLeftOf="@id/guideLeft"
        app:layout_constraintRight_toRightOf="@id/guideRight">
        <TextView
            android:id="@+id/numberOfSeatsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_seats"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/seats"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <EditText
            android:id="@+id/seats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:hint="1"
            android:ems="2"
            android:maxLength="2"
            app:layout_constraintLeft_toRightOf="@id/numberOfSeatsText"
            app:layout_constraintRight_toRightOf="parent"/>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/checkCL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/numberOfSeatsCL"
        app:layout_constraintBottom_toTopOf="@+id/offerBtn"
        app:layout_constraintLeft_toLeftOf="@id/guideLeft"
        app:layout_constraintRight_toRightOf="@id/guideRight">
        <CheckBox
            android:id="@+id/pets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pets"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/smoking"/>
        <CheckBox
            android:id="@+id/smoking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smoking"
            app:layout_constraintLeft_toRightOf="@id/pets"
            app:layout_constraintRight_toRightOf="parent"/>
    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/offerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/offer"
        app:layout_constraintTop_toBottomOf="@id/checkCL"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/guideLeft"
        app:layout_constraintRight_toRightOf="@id/guideRight"/>

</android.support.constraint.ConstraintLayout>
