<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ugre.myride.FindRideActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guideLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"/>
    <android.support.constraint.Guideline
        android:id="@+id/guideRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/fromAndToCL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/guideLeft"
        app:layout_constraintRight_toRightOf="@id/guideRight"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/dateAndTimeCL">

        <AutoCompleteTextView
            android:id="@+id/from"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/from"
            android:inputType="textCapWords"
            android:nextFocusDown="@+id/to"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/to"/>
        <AutoCompleteTextView
            android:id="@+id/to"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/to"
            android:inputType="textCapWords"
            android:nextFocusDown="@+id/cost"
            app:layout_constraintLeft_toRightOf="@id/from"
            app:layout_constraintRight_toRightOf="parent"/>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/dateAndTimeCL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fromAndToCL"
        app:layout_constraintLeft_toLeftOf="@id/guideLeft"
        app:layout_constraintRight_toRightOf="@id/guideRight"
        app:layout_constraintBottom_toTopOf="@+id/costAndSeatsCL">

        <EditText
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            android:inputType="date"
            android:focusable="false"
            android:clickable="true"
            android:longClickable="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/time"/>

        <EditText
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/time"
            android:inputType="time"
            android:focusable="false"
            android:clickable="true"
            android:longClickable="false"
            app:layout_constraintLeft_toRightOf="@id/date"
            app:layout_constraintRight_toLeftOf="@+id/plus_minus"/>

        <TextView
            android:id="@+id/plus_minus"
            android:text="@string/plus_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toLeftOf="@+id/timeSpinner"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Spinner
            android:id="@+id/timeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/time_spinner"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/costAndSeatsCL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dateAndTimeCL"
        app:layout_constraintLeft_toLeftOf="@id/guideLeft"
        app:layout_constraintRight_toRightOf="@id/guideRight"
        app:layout_constraintBottom_toTopOf="@+id/petsAndSmokingCL">

        <EditText
            android:id="@+id/cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/cost_max"
            android:inputType="number"
            android:maxLength="6"
            android:nextFocusDown="@+id/seats"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/seats"/>
        <EditText
            android:id="@+id/seats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/seats_min"
            android:inputType="number"
            android:digits="123456789"
            android:maxLength="2"
            app:layout_constraintLeft_toRightOf="@id/cost"
            app:layout_constraintRight_toRightOf="parent"/>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/petsAndSmokingCL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/costAndSeatsCL"
        app:layout_constraintLeft_toLeftOf="@id/guideLeft"
        app:layout_constraintRight_toRightOf="@id/guideRight"
        app:layout_constraintBottom_toTopOf="@+id/findBtn">

        <CheckBox
            android:id="@+id/pets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pets"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/smoking"/>
        <CheckBox
            android:id="@+id/smoking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smoking"
            app:layout_constraintLeft_toRightOf="@id/pets"
            app:layout_constraintRight_toRightOf="parent"/>
    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/findBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find"
        app:layout_constraintTop_toBottomOf="@id/petsAndSmokingCL"
        app:layout_constraintLeft_toLeftOf="@id/guideLeft"
        app:layout_constraintRight_toRightOf="@id/guideRight"
        app:layout_constraintBottom_toTopOf="@+id/rideList" />
    
    <ListView
        android:id="@+id/rideList"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/findBtn"
        app:layout_constraintLeft_toLeftOf="@id/guideLeft"
        app:layout_constraintRight_toRightOf="@id/guideRight"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/nothingFoundTV"
        android:visibility="gone"
        android:textAlignment="center"
        android:text="@string/nothing_found"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/findBtn"
        app:layout_constraintLeft_toLeftOf="@id/guideLeft"
        app:layout_constraintRight_toRightOf="@id/guideRight"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/findBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>
