<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.Guideline
        android:id="@+id/guideMid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6"/>

    <me.grantland.widget.AutofitTextView
        android:id="@+id/from"
        android:text="@string/from"
        android:textAlignment="center"
        android:maxLines="2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/arrow"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_directions"
        app:layout_constraintLeft_toRightOf="@id/from"
        app:layout_constraintRight_toLeftOf="@+id/to"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <me.grantland.widget.AutofitTextView
        android:id="@+id/to"
        android:text="@string/to"
        android:textAlignment="center"
        android:maxLines="2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/arrow"
        app:layout_constraintRight_toRightOf="@id/guideMid"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/date"
        android:text="@string/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/guideMid"
        app:layout_constraintRight_toLeftOf="@+id/time"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:id="@+id/time"
        android:text="@string/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/date"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>